--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/title_button" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView" />
-
+        android:id="@+id/recyclerView"
+        />
 </LinearLayout>
